--- a/tools/正则.md
+++ b/tools/正则.md
@@ -4,9 +4,11 @@
 
 用来匹配文本的一套规则。
 
-## 形式
-- 简化形式：/pattern/gi
-- 调用构造函数：new RegExp('pattern', 'gi')
+## 创建正则
+- 简化形式：/pattern/[修饰符] eg: /love pattern/gi
+- 调用构造函数：new RegExp(正则字符串[, 修饰符字符串]) eg: new RegExp('pattern', 'gi')
+
+**注意**：即使两者匹配的结果相同，但两者也不相等。因为存放对象的内存地址不同。
 
 ## 元字符
 
@@ -15,9 +17,12 @@
 - \d 匹配数字    \D 匹配非数字
 - \w 匹配字母、数字、下划线   \W 匹配除了字母数字下划线
 - \s 匹配空格、tab、换行符   \S 匹配除了空格、tab、换行符
-- \b 匹配独立部分（未和字母、数字、下划线连接的部分） \B 非独立部分
 - . 匹配除\n之外的任意字符
-- ^ 匹配字符串的开始    $ 匹配字符串的结束（用在字符串首尾才有这个意思）
+
+## 边界
+- \b 匹配独立部分（未和字母、数字、下划线连接的部分） \B 非独立部分
+- ^ 匹配字符串的开始 
+- $ 匹配字符串的结束（用在字符串首尾才有这个意思）
 
 ## 转义字符
 
@@ -28,6 +33,20 @@
 ## 常用标识
 - i 不区分大小写 
 - g 全局匹配
+- m 允许在使用^/$边界符时，.可匹配多行。（如果没有^/$，.默认是可以匹配多行的）
+
+    ``` js
+    `
+    asa
+    a
+    `.match(/^a.+/g)  => null
+
+
+    `
+    asa
+    a
+    `.match(/^a.+/gm) => ['asa']
+    ```
 
 ## 量词
 - ? 0或1个
