缓存 markdown用法小记

--- a/http/缓存.md
+++ b/http/缓存.md
@@ -1,10 +1,6 @@
 # 缓存
 
-保存资源的副本，在下一次请求时直接使用该副本。
-
-## 好处
-
-减轻服务器的压力，减少获取资源的耗时，提升性能。
+保存资源的副本，在下一次请求时直接使用该副本。从而减轻服务器的压力，减少获取资源的耗时，提升性能。
 
 ## 缓存分类
 
@@ -55,7 +51,7 @@ Cache-Control: max-age=31536000
 ``` js
 s-maxAge=\<seconds>
 
-覆盖max-age 或者 Expires 头，但是仅适用于共享缓存。
+覆盖max-age 或者 Expires（http 1.0） 头，但是仅适用于共享缓存。
 ```
 
 #### 缓存验证
@@ -67,7 +63,7 @@ Cache-Control: max-age=31536000, no-cache
 ```
 
 ``` js
-当缓存过期之后，才去服务器验证。和单独设置max-age/expires一样的效果。
+当缓存过期之后，就去去服务器验证，避免使用就缓存。和单独设置max-age/expires一样的效果。
 
 Cache-Control: max-age=31536000, immutable/must-revalidate
 ```
@@ -85,7 +81,7 @@ proxy-revalidate
 ``` js
 基于数字签名的认证方式，对资源的内容有唯一的签名，比如hash码。
 
-Etag/If-Modified-Since
+Etag/If-None-Match
 ```
 
 ``` js
@@ -94,11 +90,23 @@ Etag/If-Modified-Since
 Last-Modified/If-Modified-Since
 ```
 
+`Etag` 的优先级高于 `Last-Modified`。
+
 #### 禁止中间代理修改资源
 
-中间代理可以对图像格式进行转换，以便节省缓存空间或者减少缓慢链路上的流量。通过设置no-transform禁止上述操作。
+中间代理可以对图像格式进行转换，以便节省缓存空间或者减少缓慢链路上的流量。
 
-Cache-Control: public, max-age=31536000, no-transform
+通过设置no-transform禁止中间代理修改：`Content-Type`、`Content-Encoding`、`Content-Range`等有关资源的headers。
+
+``` js
+  Cache-Control: public, max-age=31536000, no-transform
+```
+
+## 缓存思路图
+
+![缓存1](./img/缓存1.png)
+
+![缓存2](./img/缓存2.png)
 
 #### 学习链接
 
