--- a/vue/vue-router/导航守卫.md
+++ b/vue/vue-router/导航守卫.md
@@ -49,7 +49,7 @@
     {
       path: '/',
       name: 'home',
-      component: () =>  import('webpackChunkName: 'home'' '@/pages/home/Home.vue'),
+      component: () =>  import(/* webpackChunkName: 'home' */ '@/pages/home/Home.vue'),
       beforeEnter (to, from, next) {
         next()
       }
