--- a/vue/vue-router/路由元信息.md
+++ b/vue/vue-router/路由元信息.md
@@ -5,11 +5,11 @@
     {
       path: '/',
       name: 'home',
-      component: () => import('webpackChunkName: "home"' '@/views/home/Home'),
+      component: () => import(/* webpackChunkName: "home" */ '@/views/home/Home'),
       children: [{
         path: '/one',
         name: 'one',
-        component: () => import('webpackChunkName: "one"' '@/views/home/components/one')
+        component: () => import(/* webpackChunkName: "one" */ '@/views/home/components/one')
       }]
     }
 
