--- a/vue/vue-router/导航守卫.md
+++ b/vue/vue-router/导航守卫.md
@@ -14,7 +14,7 @@
       next()
     })
 
-    router.beforeEach((to, from, next) => {
+    router.beforeResolve((to, from, next) => {
       next()
     })
 
@@ -73,7 +73,7 @@
       next()
     },
 
-    // 离开该组件的路由时调用
+    // 离开该组件的路由时调用（本组件上刷新，是不会调用的！）
     beforeRouteLeave (to, from, next) {
       console.log('/ beforeRouteLeave...')
       next()
