--- a/nginx/正向代理和反向代理.md
+++ b/nginx/正向代理和反向代理.md
@@ -1,8 +1,8 @@
 ## 正向代理
 
-为客户端代理。中间代理服务器作为一个媒介，代理用户的请求到服务端，拿到服务端返回的结果后，再将结果返回给用户的行为叫做正向代理。
+为客户端代理。中间代理服务器作为一个媒介，代理用户的请求到服务端，拿到服务端返回的结果后，再将结果返回给用户的行为。
 
-因为权限等原因，用户不能直接访问 `server`。索引中间代理就出来了。
+对客户端透明，对服务端非透明；服务端不知道接受的请求是来自代理服务器，还是傻傻地以为请求是来自真正的用户的。
 
 ![正向代理](./img/正向代理.jpg)
 
@@ -12,7 +12,9 @@
 
 ## 反向代理
 
-为服务器代理。中间代理服务器接收用户请求，中间代理服务器决定去把请求发送到哪个服务器去。
+为服务器代理。中间代理服务器接收用户请求，中间代理服务器决定去把请求发送到哪个服务器去。从而帮服务器做请求转发，负载均衡等。
+
+对服务端透明，对客户端不透明；客户端不知道访问的是代理服务器，服务端对其知晓的。
 
 ![反向代理](./img/反向代理.jpg)
 
