修改了 tools/正则.md

--- a/tools/正则.md
+++ b/tools/正则.md
@@ -2,17 +2,19 @@
 
 ## 正则作用：
 
-用来匹配文本的一套规则。
+一种匹配模式，用来匹配字符或者位置。[正则图形化工具](https://regexper.com/)
 
 ## 创建正则
-- 简化形式：/pattern/[修饰符] eg: /love pattern/gi
-- 调用构造函数：new RegExp(正则字符串[, 修饰符字符串]) eg: new RegExp('pattern', 'gi')
+- 字面量：/pattern/[修饰符] eg: /love pattern/gi
+- 构造函数：new RegExp(正则字符串[, 修饰符字符串]) eg: new RegExp('pattern', 'gi')
+
+尽量使用字面量形式，因为构造函数中的正则是字符串作为参数，需要考虑字符转义问题，可能会多写 '/'。
 
 **注意**：即使两者匹配的结果相同，但两者也不相等。因为存放对象的内存地址不同。
 
 ## 元字符
 
-用来辅助正则匹配文本的特殊代码
+用来辅助正则匹配文本的特殊代码。
 
 - \d 匹配数字    \D 匹配非数字
 - \w 匹配字母、数字、下划线   \W 匹配除了字母数字下划线
@@ -31,6 +33,9 @@
 需要转义的字符有: . * ? + ^ $ \ / - [ ] ( ) { } 
 
 ## 常用标识
+
+对应着正则对象的可读属性：ignoreCase、global、multiline
+
 - i 不区分大小写 
 - g 全局匹配
 - m 允许在使用^/$边界符时，.可匹配多行。（如果没有^/$，.默认是可以匹配多行的）
@@ -48,14 +53,14 @@
     `.match(/^a.+/gm) => ['asa']
     ```
 
-## 量词
+## 量词/横向模糊匹配(匹配字符串的长度是不固定的)
 - ? 0或1个
 - \+ 1个或多个
 - \* 0个或多个
 - {n, m}      至少n个最多m个
 - {n}      匹配n个
 
-## 范围词
+## 范围词/字符集/纵向模糊匹配(可以匹配一个字符，但是这个字符是不确定的)
 
 使用[]规定匹配的字符范围
 
@@ -78,9 +83,9 @@
 
   ```
 
-## 子集
+## 子集/分组
 
-使多个字符作为一个整体来匹配。一个表达式中可以有多个子集。
+使多个字符作为一个整体来匹配。一个表达式中可以有多个子集。同时可用 `$1、$2、$3...` 拿到各个分组的内容。
 
 ``` js
 // 固定字符的子集
@@ -93,7 +98,7 @@ str.match(/([\d[]])+/g)  // ["9[", "[89]"]
 
 ```
 
-## 或者: |
+## 或者/多选分支: |
 
 匹配多种情况，和[]有相似之处。也可配合子集使用，功能也十分强大。
 
@@ -129,15 +134,55 @@ str.match(/a.*?b/)   // ['aab', 'ab']
 - (?<=pattern) 查找目标文本前面的字符要符合pattern模式
 - (?<!pattern) 查找目标文本前面的字符不能符合pattern模式
 
+## 实用正则
+
+提取图片src：
+
 ``` js
-/* 提取src */
+const str = 
+  `<img src="/static/1.jpg" alt=""/> 
+    <div>
+        <img src="/static/14.jpg" alt=""/>
+    </div>`;
 
-const str = `<img src="/static/1.jpg" alt=""/> 
-            <div>
-                <img src="/static/14.jpg" alt=""/>
-            </div>`
+console.log(
+  str.match(/(?<==")[^"]+/g)
+);
 
-str.match(/(?<==")[^"]+/g)  // ["/static/1.jpg", "/static/14.jpg"]
+// ["/static/1.jpg", "/static/14.jpg"]
+```
 
+获取 url 中的参数及其值：
 
+``` js
+let url = 'https://www.baidu.com?name=jawil&age=23';
+
+url.replace(/(\w+)=(\w+)/g, (str, k, v) => {
+  console.log(k, v);
+});
+
+```
+
+数字化格式：
+
+``` js
+let str = '1234567890';
+
+console.log(
+  str.replace(/\B(?=(\d{3})+(?!\d))/g, ',')
+)
+
+// 1,234,567,890
+```
+
+去掉字符串两端的空格（也可以实用兼容到 IE9+ 的 `trim()` 方法）：
+
+``` js
+let str = ' js de_j9s d  ';
+
+console.log(
+  str.replace(/^\s*|\s*$/g, '')
+);
+
+// js de_j9s d
 ```
