--- a/node/命令行中使用调试器.md
+++ b/node/命令行中使用调试器.md
@@ -29,3 +29,10 @@ console.log(6)
 途中，可用 .exit 命令退出调试器。
 
 ![.exit退出调试](img/node调试4.jpg)
+
+除了上述调试以外，当 node 开启调试器时，也可以在浏览器上调试：
+
+![node-chrome调试](img/node调试5.jpg)
+
+相关链接：
+- [使用 node-inspector 调试 node 代码](https://github.com/node-inspector/node-inspector)
