修改之前Dart基础语法

--- a/dart/函数.md
+++ b/dart/函数.md
@@ -7,29 +7,27 @@ void out(String hello) {
   print('params from main... $hello');
 }
 
-main() {
+main(List<String> args) {
   out('hello');
 }
 ```
 
-默认参数，main 函数没传参数 world，就显示默认值：
-
-实现方式一：实参通过 `:` 标注传递什么参数，形参列表使用 `{}` 包裹。
+命名可选参数：实参通过 `:` 标注传递什么参数，形参列表使用 `{}` 包裹。与顺序无关，需要指明参数名。
 
 ``` dart
-void out({String world = 'world', String hello}) {
+void out(String hello, {String msg = 'msg', String world}) {
   print('params from main... $hello $world');
 }
 
 main() {
-  out(hello: 'hello');
+  out('hello', world: 'world');
 }
 ```
 
-实现方式二：形参列表使用 `[]` 包裹。这种受到位置的限制，上一种默认参数可放在形参列表的任意位置。
+位置可选参数：形参列表使用 `[]` 包裹。这种受到位置的限制。参数值会按照顺序赋值。
 
 ``` dart
-void out(String hello, [String world = 'world']) {
+void out(String hello, [String msg, String world = 'world']) {
   print('params from main... $hello $world');
 }
 
@@ -51,3 +49,5 @@ main() {
   });
 }
 ```
+
+**注意：** 如果函数没显示 `return`，默认返回 `null` 。
