--- a/dart/异常.md
+++ b/dart/异常.md
@@ -30,6 +30,26 @@
     }
   }
   ```
+- 如果捕获异常并处理后还允许该异常继续传播，可以使用 `rethrow` 关键字。
+  ``` dart
+  void misbehave() {
+    int x = 12, y = 0, res;
+    try {
+      res = x ~/ y;
+    } on IntegerDivisionByZeroException catch(e) {
+      print(e);
+      rethrow;
+    }
+  }
+
+  void main() {
+    try {
+      misbehave();
+    } catch (e) {
+      print('main() finished handling ${e.runtimeType}.');
+    }
+  }
+  ```
 
 ## 抛出异常
 
