--- a/dart/类.md
+++ b/dart/类.md
@@ -199,9 +199,9 @@ main() {
 class ImmutablePoint {
   final num x;
   final num y;
-  const ImmutablePoint(this.x, this.y);
+  const ImmutablePoint(this.x, this.y);   // 常量构造函数
 
-  static final ImmutablePoint origin = const ImmutablePoint(0, 0);
+  static final ImmutablePoint origin = const ImmutablePoint(0, 0);    // 创建一个常量对象不能用new，要用const
 }
 ```
 
@@ -227,9 +227,9 @@ class Point {
 
 ## 抽象类和抽象函数
 
-实例函数、 getter、和 setter 函数可以为抽象函数， 抽象函数是只定义函数接口但是没有实现的函数，由子类来 实现该函数。如果用分号来替代函数体则这个函数就是抽象函数。
+实例函数、 getter、和 setter 函数可以为抽象函数，抽象函数是只定义函数接口但是没有实现的函数，由子类来实现该函数。如果用分号来替代函数体则这个函数就是抽象函数。
 
-使用 abstract 修饰符定义一个 抽象类，不能用来实例化，因为有些函数并未实现。
+使用 abstract 修饰符定义一个接口/抽象类，不能用来实例化，因为有些函数并未实现。
 
 ``` dart
 abstract class Doer {
