完善部分 Dart 语法

--- a/dart/函数.md
+++ b/dart/函数.md
@@ -12,10 +12,22 @@ main(List<String> args) {
 }
 ```
 
-命名可选参数：实参通过 `:` 标注传递什么参数，形参列表使用 `{}` 包裹。与顺序无关，需要指明参数名。
+必填参数：形参使用 @required 来标识：
 
 ``` dart
-void out(String hello, {String msg = 'msg', String world}) {
+void out(@required String hello) {
+  print('params from main... $hello');
+}
+
+main(List<String> args) {
+  out('hello');
+}
+```
+
+命名可选参数：实参通过 `:` 标注传递什么参数，形参列表使用 `{}` 包裹。与顺序无关，需要指明参数名。可选参数默认值。
+
+``` dart
+void out(String hello, {String msg = 'msg', @required String world}) {
   print('params from main... $hello $world');
 }
 
@@ -50,4 +62,6 @@ main() {
 }
 ```
 
-**注意：** 如果函数没显示 `return`，默认返回 `null` 。
+**注意：** 
+- 如果函数没显示 `return`，默认返回 `null` 。
+- 可选参数未给默认值，默认为 `null`。
