--- a/dart/类.md
+++ b/dart/类.md
@@ -2,6 +2,8 @@
 
 Dart 支持 `OOP`，存在 `类`、`接口` 的概念。
 
+Dart 中每个对象都是类的实例，所有类都继承来自 Object。
+
 声明类：
 
 ``` dart
@@ -40,7 +42,8 @@ class Student {
 }
 
 void main() {
-  Student s1 = new Student();
+  // Dart 中创建实例，不需要写 new
+  Student s1 = Student();
   s1.stud_name = 'MARK';
   s1.stud_age = 0;
   print(s1.stud_name);
@@ -60,7 +63,7 @@ Dart 仅支持 `单继承`，一个类只能有一个父类，子类可是使用
 
 **注意：** 
 
-- 如果在构造函数的初始化列表中使用 super()，需要把它放到最后。
+- 如果在构造函数的初始化列表中使用 super()，需要把它放到**最后**。
 - 把构造函数赋值给实例变量，可以简化。
 
 ``` dart
@@ -84,7 +87,7 @@ class Student extends Person {
 }
 
 main() {
-  Student stu = new Student('Jack', 12, 1919);
+  Student stu = Student('Jack', 12, 1919);
   print(stu.getName());
   print(stu.getAge());
 }
@@ -107,6 +110,7 @@ class Person {
   String name;
   int age;
 
+  // 构造函数语法糖
   Person (this.name, this.age);
 
   Person.fromMap(Map map) {
