add form widgets

--- a/dart/函数.md
+++ b/dart/函数.md
@@ -24,6 +24,10 @@ main(List<String> args) {
 }
 ```
 
+### 可选参数
+
+`Dart` 中分为两种可选参数：命名可选参数、位置可选参数。
+
 命名可选参数：实参通过 `:` 标注传递什么参数，形参列表使用 `{}` 包裹。与顺序无关，需要指明参数名。可选参数默认值。
 
 ``` dart
@@ -48,17 +52,36 @@ main() {
 }
 ```
 
-匿名函数作为实参：函数作为一等身份，其中的匿名函数也可用于实参、当做返回值。
+### 匿名函数
+
+函数没有函数名，却被使用叫做匿名函数。匿名函数的作用主要有二：
+
+- 匿名函数自执行（不推荐）。
+- 赋值给变量，此时变量是个 `Function`（不推荐）。
+- 作为实参（许多内置 API 都是有函数作为形参）。
 
 ``` dart
-void out(inner) {
-  inner(msg: 'Message from inner function');
+void main() {
+  (() {
+    print('匿名函数自执行...');
+  })();
 }
 
-main() {
-  out(({String msg, String other = 'hahaha'}) {
-    print('$msg $other');
+void main() {
+  Function func = () {
+    print('匿名函数赋值给变量...');
+  };
+
+  func();
+}
+
+void main() {
+  out(() {
+    print('匿名函数作为形参...');
   });
+}
+void out(Function func) {
+  func();
 }
 ```
 
