--- a/dart/类.md
+++ b/dart/类.md
@@ -2,9 +2,9 @@
 
 Dart 支持 `OOP`，存在 `类`、`接口` 的概念。
 
-Dart 中每个对象都是类的实例，所有类都继承来自 Object。
+Dart 中每个对象都是类的实例，所有类都继承来自 Object，使用类来创建实例，可以省略 `new`。
 
-声明类：
+### demo: 声明一个类
 
 ``` dart
 class class_name {
@@ -57,7 +57,7 @@ void main() {
 */
 ```
 
-## 类的继承
+### 类的继承
 
 Dart 仅支持 `单继承`，一个类只能有一个父类，子类可是使用父类所有属性和方法（除了构造方法外），其中 `super` 关键字是父类的引用。
 
@@ -93,13 +93,13 @@ main() {
 }
 ```
 
-## 构造函数
+### 构造函数
 
 如果你没有定义构造函数，则会有个默认无参构造函数，并且会调用超类无参的构造函数。
 
 子类不会继承超类的构造函数。子类如果没有定义构造函数，则只有一个默认构造函数 （没有名字没有参数）。
 
-使用命名构造函数可以为一个类实现多个构造函数，且命名构造函数也不会被继承。
+构造方法不能重载，要创建多个类的构造方法，就要使用命名构造方法。使用命名构造函数可以为一个类实现多个构造函数，且命名构造函数也不会被继承。
 
 如果你希望子类也有超类一样的命名构造函数， 你必须在子类中自己实现该构造函数。
 
@@ -143,15 +143,6 @@ class Person {
     name = map['name'];
     age = map['age'];
   }
-
-  // 也可以这样实现构造函数
-  /*
-    Person.fromMap(Map map)
-      : name = map['name'],
-        age = map['age'] {
-          print('父类初始化了...');
-        } 
-  */
 }
 
 class Student extends Person {
@@ -197,19 +188,63 @@ main() {
 }
 ```
 
-常量构造函数: 如果你的类提供一个状态不变的对象，你可以把这些对象 定义为编译时常量。要实现这个功能，需要定义一个 const 构造函数， 并且声明所有类的变量为 final。
+### 常量构造函数
+
+如果希望类的实例是不可变的，你可以把这些对象定义为编译时常量。
+
+- 包含常量构造方法的类中，所有的成员变量为 `final`。
+- 常量构造函数创建对象时不能使用 `new`，而是要用 `const`。
 
 ``` dart
 class ImmutablePoint {
   final num x;
   final num y;
-  const ImmutablePoint(this.x, this.y);   // 常量构造函数
+  const ImmutablePoint(this.x, this.y);
 
-  static final ImmutablePoint origin = const ImmutablePoint(0, 0);    // 创建一个常量对象不能用new，要用const
+  static final ImmutablePoint origin = const ImmutablePoint(0, 0);
 }
 ```
 
-## 实例方法
+### 工厂构造方法
+
+可以在工厂构造方法中返回一个对象。其他构造方法则不能有返回值的。
+
+``` dart
+class Person {
+  String name;
+  int age;
+
+  factory Person(String name, int age) {
+    Map map = {
+      'name': name,
+      'age': age
+    };
+    return Person.fromMap(map);
+  }
+
+  Person.fromMap(Map map) {
+    name = map['name'];
+    age = map['age'];
+  }
+}
+```
+
+### 初始化列表
+
+初始化列表允许：在构造器执行之前，初始化实例变量。不同的实例化变量用逗号隔开。
+
+``` dart
+class Person {
+  String name;
+  int age;
+
+  Person.fromMap(Map map) : name = map['name'], age = map['age'] {
+    print('父类初始化了...');
+  }
+}
+```
+
+### 实例方法
 
 可在实例方法中通过 `this` 访问到实例对象。
 
@@ -228,6 +263,14 @@ class Point {
   }
 }
 ```
+
+### 静态成员
+
+可使用 `static` 声明类中的变量/方法是静态的，使用静态成员注意以下两个个规则：
+
+- 静态成员不能被实例对象访问，需要使用类名访问。
+- 静态成员不能访问动态成员，动态成员能访问静态成员。
+- 在类中声明常量使用：`static const`。
 
 ## 抽象类和抽象函数
 
@@ -251,18 +294,33 @@ class EffectiveDoer extends Doer {
 
 **注意：** 调用一个没实现的抽象函数会导致运行时异常。
 
-## 静态变量/函数：对于类级别的变量/函数
+### 对象操作符
 
-也就是说，不能被类的实例使用到。
+- 条件成员访问：?. 
+- 类型转换：as
+- 类型判断：is、!is
+- 获取类实例中的变量或者执行实例方法，然后返回该类的实例（级联操作）：..
 
 ``` dart
-class Person {
-  static String name;
-  static getName() => Person.name;
+void main() {
+  Person person = Person(
+    name: 'Jack', 
+    age: 20
+  );
+  person
+    ..name = 'Jack1'
+    ..age = 21
+    ..printName();
 }
-main() {
-  Person.name = 'red';
-  print(Person.name == 'red');
-  print(Person.getName());
+
+class Person {
+  String name;
+  int age;
+
+  printName() {
+    print(name);
+  }
+
+  Person({this.name, this.age});
 }
 ```
