--- a/js 基础/数组.md
+++ b/js 基础/数组.md
@@ -383,3 +383,10 @@ Array.isArray([])
 ``` js
 ({}).toString.call([]) === '[object Array]'
 ```
+小程序车豆豆 前端开发实习生
+1. 使用 gulp 打包微信小程序，包括：实时编译、多环境配置、代码压缩等；
+2. 组件化开发用户界面。
+
+Webpack4.x 打包 Vue MPA 前端开发
+1. 支持基于 Vue 地多页面打包；
+2. 支持不同页面，相同模块的抽离（比如：公共的 Vue、vue-router、Vuex ）；
