--- a/typescript/接口.md
+++ b/typescript/接口.md
@@ -1,34 +1,178 @@
 ### interface 接口
 
-interface 主要起到规范的作用，与 abstract 相似，但强于 abstract 的约束能力：
-- 对类的一部分进行抽象，限制了类。
-- 不同类之间的共性由接口来管理。
+interface 主要起到规范的作用，用来定义对象、函数、数组、元组、类等的结构：
 
-比如：Cat、Dog 类都有 eat 方法，可以把 eat 方法交由接口来规范。
+使用接口规范函数：
 
 ``` ts
-interface Eat {
-  eat(): void;
+interface FullName {
+  (startName: string, endName: string): string;
 }
+const getFullName: FullName = <FullName>(startName: string, endName: string) =>  startName + endName;
 
-class Cat implements Eat {
-  eat(): void {
-    console.log('cat eat');
-  }
+
+interface Counter {
+  (start: number): string;
+  interval: number;
+  reset(): void;
 }
+function getCounter(): Counter {
+  let counter = <Counter>function (start: number) { };
+  counter.interval = 123;
+  counter.reset = function () { };
+  return counter;
+}
+let c = getCounter();
+c(10);
+c.reset();
+c.interval = 5.0;
+```
 
-class Dog implements Eat {
-  eat(): void {
-    console.log('dog eat');
-  }
+规范对象：
+
+``` ts
+interface Fruit {
+  num: number,
+  type: string
 }
 ```
 
-对于类来说，需要实现（implements）接口；对于接口来说，只能继承。
+规范类：包括类的属性、方法。
+
+``` ts
+interface FullName {
+  getName (otherStr: string): string;
+  startName: string;
+  endName?: string;
+}
+
+class Name implements FullName {
+  startName: string;
+  endName: string;
+
+  constructor (startName: string, endName: string) {
+    this.startName = startName;
+    this.endName = endName;
+  }
+
+  getName(otherStr: string): string {
+    return this.startName + this.endName + otherStr;
+  }
+  
+}
+
+alert( new Name('Jack', 'hahah').getName('lalal') );
+```
+
+### 多余属性检测
+
+接口对字段有严格的规范，若实际所传参数多余接口个数，这样就会报错：
+
+``` ts
+interface Fruit {
+  num: number,
+  type: string
+}
+
+const apple: Fruit = {
+  num: 1,
+  type: 'apple',
+  color: 'pink', // Error
+  size: 10
+};
+```
+
+解决方法有：
+- 属性签名：通过明确的指定索引签名让 TypeScript 允许我们可以做任意我们想做的事情。
+  ``` ts
+  interface Fruit {
+    num: number,
+    type: string,
+    [prop: string]: any
+  }
+
+  const apple: Fruit = {
+    num: 1,
+    type: 'apple',
+    color: 'pink',
+    size: 10
+  };
+  ```
+- 类型断言：强制性地把变量类型断言为 Fruit
+  ``` ts
+  interface Fruit {
+    num: number,
+    type: string
+  }
+
+  const apple: Fruit = <Fruit>{
+    num: 1,
+    type: 'apple',
+    color: 'pink',
+    size: 10
+  };
+  ```
+- 类型兼容性：把值提取为一个变量
+  ``` ts
+  interface Fruit {
+    num: number,
+    type: string
+  }
+
+  const myApple = {
+    num: 1,
+    type: 'apple',
+    color: 'pink',
+    size: 10
+  };
+  const apple: Fruit = myApple;
+  ```
+
+### readonly 修饰符
+
+readonly 不仅可以修饰类中变量为只读的，也能修饰接口中属性：
+
+``` ts
+interface Fruit {
+  num: number,
+  readonly type: string
+}
+
+const apple: Fruit = {
+  num: 1,
+  type: 'apple'
+};
+
+apple.type = 'banana'; // Cannot assign to 'type' because it is a read-only property.
+```
+
+因为数组可看作特殊索引的对象，因此也能通过接口对数组的项做规范：
+
+``` ts
+interface ArrInterface {
+  0: number,
+  readonly 1: number
+};
+
+const nums: ArrInterface = [1, 2];
+nums[1] = 3; // Cannot assign to '1' because it is a read-only property.
+```
+
+同理，也能对元组做规范：
+
+``` ts
+interface TupleInterface {
+  0: number,
+  readonly 1: string
+};
+
+const tuple: TupleInterface = [1, '2'];
+tuple[1] = '3'; // Cannot assign to '1' because it is a read-only property.
+```
 
 ### 接口继承接口
 
-接口继承接口，子接口会有更多未实现的方法，因此需要实现它的类去做更多的实现。
+对于类来说，需要实现（implements）接口；对于接口来说，只能继承。接口继承接口，子接口会有更多未实现的方法，因此需要实现它的类去做更多的实现。
 
 ``` ts
 interface Eat {
@@ -69,7 +213,33 @@ class Dog implements EatWays {
 }
 ```
 
-### 一个类实现多个接口
+### 类实现单个接口
+
+规范类的结构时，与 abstract 相似，但强于 abstract 的约束能力：
+- 对类的一  部分进行抽象，限制了类。
+- 不同类之间的共性由接口来管理。
+
+比如：Cat、Dog 类都有 eat 方法，可以把 eat 方法交由接口来规范。
+
+``` ts
+interface Eat {
+  eat(): void;
+}
+
+class Cat implements Eat {
+  eat(): void {
+    console.log('cat eat');
+  }
+}
+
+class Dog implements Eat {
+  eat(): void {
+    console.log('dog eat');
+  }
+}
+```
+
+### 类实现多个接口
 
 一个类可实现多个接口，用逗号隔开。这样给类扩大了功能。
 
@@ -101,6 +271,9 @@ class Cat implements Eat, Drink {
 接口不仅可继承其他接口来扩大自己的规范行为，也可以继承类。
 
 ``` ts
+class Animal {
+  name: string
+}
 
 interface Eat extends Animal {
   age: number;
@@ -109,63 +282,3 @@ interface Eat extends Animal {
 const eat: Eat = {name: 'baba', age: 20};
 ```
 
-### 使用接口规范函数
-
-规范函数所需参数类型、返回值类型等。
-
-``` ts
-interface FullName {
-  (startName: string, endName: string): string;
-}
-
-const getFullName: FullName = <FullName>(startName: string, endName: string) =>  startName + endName;
-```
-
-``` ts
-interface Counter {
-  (start: number): string;
-  interval: number;
-  reset(): void;
-}
-
-function getCounter(): Counter {
-  let counter = <Counter>function (start: number) { };
-  counter.interval = 123;
-  counter.reset = function () { };
-  return counter;
-}
-
-let c = getCounter();
-c(10);
-c.reset();
-c.interval = 5.0;
-```
-
-### 使用接口规范一个具体的类
-
-包括类的属性、方法。
-
-``` ts
-interface FullName {
-  getName (otherStr: string): string;
-  startName: string;
-  endName?: string;
-}
-
-class Name implements FullName {
-  startName: string;
-  endName: string;
-
-  constructor (startName: string, endName: string) {
-    this.startName = startName;
-    this.endName = endName;
-  }
-
-  getName(otherStr: string): string {
-    return this.startName + this.endName + otherStr;
-  }
-  
-}
-
-alert( new Name('Jack', 'hahah').getName('lalal') );
-```
