--- a/typescript/数据类型.md
+++ b/typescript/数据类型.md
@@ -12,7 +12,7 @@ const bool: boolean = true;
 
 ### 数字
 
-数字：和JS一样，TS里的所有数字都是浮点数。 这些浮点数的类型是number。TS还支持十进制、十六进制、二进制、八进制的字面量。
+数字：和 JS 一样，ts 里的所有数字都是浮点数。 这些浮点数的类型是 number。ts 还支持十进制、十六进制、二进制、八进制的字面量（es6 也新增了）。
 
 ``` ts
 let decLiteral: number = 6;
@@ -23,7 +23,7 @@ let octalLiteral: number = 0o744;
 
 ### 字符串类型
 
-字符串：支持单引号、双引号、``
+字符串：支持单引号、双引号、模板字符串（``）
 
 ``` ts
 let str: string = 'haha'
@@ -34,7 +34,7 @@ str = `${ test }`  // 'demo'
 
 ### 数组
 
-有两种定义数组元素的方式。第一种，可以在元素类型后面接上[]；使用数组泛型：Array<元素类型>
+有两种定义数组元素的方式。第一种，可以在元素类型后面接上 []；使用数组泛型：Array<元素类型>
 
 ``` ts
 const nums: number[] = [1, 2, 3];
@@ -43,7 +43,7 @@ const words: Array<string> = ['first', 'second'];
 
 ### 元祖
 
-表示已知数量和类型的数组。类型不必一致。
+表示已知数量和类型的数组，必须一一对应。另外：各个类型不必一致。
 
 ``` ts
 let tuple: [number, string]
@@ -88,7 +88,7 @@ const blue: Color = Color.blue  // 'blue'
 
 ### any
 
-任意类型：躲过TS编译的类型检查，因为这些内容的类型可能是动态的。
+任意类型：躲过ts编译的类型检查，因为这些内容的类型可能是动态的。
 
 另外，由于 ts 没有 object 类型，因此遇到类似 object 这种 ts 没预定的类型时，可用 any 类型来避免报错。
 
@@ -109,21 +109,53 @@ const getVoid = (): void => {
 let unusable: void = undefined
 ```
 
-### 指定多个类型：any 或者 |
+### 指定多个类型：any 或者 |（也称联合类型）
 
 ``` ts
 // a 可未被赋值，也可被赋值了，且类型为 string 或 number
 let a: number | string | undefined = 10;
 ```
 
-### never（基本用不到）
+### undefined、null
 
-表示从来不会出现的值。主要用于函数中异常的抛出。
+既可以是数据类型，也可以作为值来使用。可以使用 null 和 undefined 来定义这两个原始数据类型：
+
+``` ts  
+let a: undefined = undefined
+let b: null = null;
+```
+
+与 void 的区别是，undefined 和 null 是所有类型的子类型。举个例子：undefined 类型的变量，可以赋值给 number 类型的变量（需要关闭严格模式）：
 
 ``` ts
-let a: never;
-
-a = (() => {
-  throw new Error('error!')
-})();
+let a: number = undefined;
 ```
+
+### never（基本用不到）
+
+表示从来不会出现的值。主要用于函数中异常的抛出。never 是其他类型的子类型，其他任何类型不是 never 的子类型。
+
+``` ts
+const a = (): never => {
+  throw new Error('error!')
+}
+```
+
+### object
+
+数组属于引用类型，也是对象类型的子类型。
+
+``` ts
+let obj: object = {
+  a: 10,
+  b: 90
+};
+
+obj = [1, 2];
+
+obj = (): void => {};
+```
+
+### 类型断言
+
+[类型断言](https://github.com/xcatliu/typescript-tutorial/blob/master/basics/type-assertion.md) 用来手动指定一个变量的类型：`<类型>值` 或者 `值 as 类型`。
