--- a/typescript/函数.md
+++ b/typescript/函数.md
@@ -9,9 +9,11 @@ const fn = (name: string, age: number): string => `${name} ${age}`
 const msg: string = fn('Jack', 10) // Jack 10
 ```
 
+也可以不使用箭头函数，使用 function 关键词来定义函数。
+
 可选参数和默认参数：
 
-**注意**：可选参数的位置要放到最后边，默认参数位置无限制。
+**注意**：可选参数的位置要必填参数的后边，默认参数位置无限制。
 
 ``` ts
 const fn = (name: string = 'Jack', age?: number): string => age ? `${name} ${age}` : name
@@ -26,4 +28,24 @@ const msg: string = fn('Bob')  // 'Bob'
 const fn = (firstName: string = '司马', ...args: Array<string>): string => `${firstName} ${args.filter(str => str)}`
 
 const msg: string = fn()  // '司马'
+```
+
+### 函数重载
+
+只能使用 function 定义的函数，函数名字相同、参数类型或者个数不同：
+
+``` ts
+// 前两者是函数重载
+function handleData(arg: string): string[];
+function handleData(arg: number): number[];
+
+// 这是函数实体
+function handleData(x: any): any {
+  if (typeof x === 'string') 
+    return x.split('');
+  else
+    return x.toString().split('');
+}
+
+console.log( handleData(123), handleData('123') );
 ```
