--- a/typescript/接口.md
+++ b/typescript/接口.md
@@ -1,6 +1,6 @@
 ### interface 接口
 
-interface 主要起到规范的作用，用来定义对象、函数、数组、元组、类等的结构：
+interface 主要起到规范的作用，用来定义对象、函数、数组、元组、类、索引等的结构：
 
 使用接口规范函数：
 
@@ -9,8 +9,11 @@ interface FullName {
   (startName: string, endName: string): string;
 }
 const getFullName: FullName = <FullName>(startName: string, endName: string) =>  startName + endName;
+```
 
+混合类型接口：接口中及定义了函数、同时定义了函数的属性
 
+``` ts
 interface Counter {
   (start: number): string;
   interval: number;
@@ -62,6 +65,22 @@ class Name implements FullName {
 }
 
 alert( new Name('Jack', 'hahah').getName('lalal') );
+```
+
+规范索引：
+
+``` ts
+interface IndexInterface {
+  [id: number]: string,
+  [idTemp: string]: string
+}
+
+const obj: IndexInterface = {
+  1: 'haha',
+  2: 'lala' // js 中属性名会先调用 toString 方法，转换成字符串
+};
+
+console.log( obj );
 ```
 
 ### 多余属性检测
