--- a/typescript/数据类型.md
+++ b/typescript/数据类型.md
@@ -156,6 +156,23 @@ obj = [1, 2];
 obj = (): void => {};
 ```
 
+### 类型别名
+
+用来给一个类型起一个新的名字。
+
+``` ts
+type Name = string;
+type NameResolver = () => string;
+type NameOrResolver = Name | NameResolver;
+function getName(n: NameOrResolver): Name {
+  if (typeof n === 'string') {
+    return n;
+  } else {
+    return n();
+  }
+}
+```
+
 ### 类型断言
 
 [类型断言](https://github.com/xcatliu/typescript-tutorial/blob/master/basics/type-assertion.md) 用来手动指定一个变量的类型：`<类型>值` 或者 `值 as 类型`。
