--- a/typescript/泛型.md
+++ b/typescript/泛型.md
@@ -43,8 +43,9 @@ interface HasLength {
   length: number
 }
 
-function showLength<T extends HasLength>(arg: T): number {
-  return arg.length;
+function showLength<T extends HasLength>(arg: T): T {
+  console.log( arg.length );
+  return arg;
 }
 
 console.log( showLength<string>('abcd') );
@@ -58,7 +59,7 @@ console.log( showLength<number>(12) );  // TS error: 型“number”不满足约
 ``` ts
 function copyFields<T extends U, U>(target: T, source: U): T {
   for (let id in source) {
-    target[id] = (<T>source)[id];
+    target[id] = (<T>source)[id]; // 类型断言
   }
   return target;
 }
